# aoc2020

./: .gitignore  CHANGELOG.md  LICENSE  advent.cabal  output.txt
days/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day3_2019.hs  Day4.hs  Day5.hs  Day5_2019.hs  Day6.hs  Day6_Golf.hs  Day7.hs  Day8.hs  Day9.hs
days/Inputs/: Day1.hs  Day2.hs  Day3.hs  Day3_2019.hs  Day4.hs  Day5.hs  Day5_2019.hs  Day6.hs  Helpers.hs  README.md
lib/: AnswerSheet.hs  BoardingPass.hs  Expense.hs  GameCode.hs  IntCode.hs  Luggage.hs  Passport.hs  Password.hs  Scenery.hs  Wiring.hs
