cabal-version:       2.4
name:                advent
version:             0.1.0.0
synopsis:            Advent of Code 2020
homepage:            https://github.com/lukfugl
license:             MIT
license-file:        LICENSE
author:              Jacob Fugal
maintainer:          lukfugl@gmail.com
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Expense, Password, Wiring, IntCode
  build-depends:       base ^>= 4.13.0.0,
                       mtl ^>= 2.2.2,
                       containers ^>= 0.6.2.1,
  hs-source-dirs:      lib
  default-language:    Haskell2010

executable advent
  main-is:             Day5_2019.hs
  other-modules:       Inputs.Day5_2019
  build-depends:       base ^>= 4.13.0.0, advent
  hs-source-dirs:      days
  default-language:    Haskell2010
