cabal-version:       2.4
name:                advent
version:             0.1.0.0
synopsis:            Advent of Code 2020
homepage:            https://github.com/lukfugl
license:             MIT
license-file:        LICENSE
author:              Jacob Fugal
maintainer:          lukfugl@gmail.com
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     GameCode
  build-depends:       base ^>=4.13.0.0
  hs-source-dirs:      lib
  default-language:    Haskell2010

executable advent
  main-is:             Day18.hs
  other-modules:       Inputs.Helpers
  build-depends:       base ^>=4.13.0.0, advent, containers
  hs-source-dirs:      days
  default-language:    Haskell2010
